<resources>
    <string name="app_name">TestSmartApp</string>
    <string name="hello_blank_fragment">Game fragment</string>
    <string name="text_button_start_game">Start game</string>
    <string name="text_button_exit">Exit</string>
    <string name="text_button_how_to_play">How to play?</string>
    <string name="text_button_black">Black</string>
    <string name="text_button_red">Red</string>
    <string name="text_button_spin">Spin</string>
    <string name="text_score">000</string>
    <string name="text_button_back_to_menu">Menu</string>
    <string name="button_understood">Understood</string>
    <string name="text_dialog_how_to_play">Guess which field will fall on the reel. Choose black or red and spin the wheel. If you guess, you will get points.</string>
</resources>