<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menu_background"
        tools:context=".ui.fragments.game.GameMenuFragment">

        <TextView
            android:id="@+id/buttonStartGame"
            android:layout_width="230dp"
            android:layout_height="90dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_menu"
            android:gravity="center"
            android:text="@string/text_button_start_game"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonHowToPlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/buttonHowToPlay"
            android:layout_width="230dp"
            android:layout_height="90dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_menu"
            android:gravity="center"
            android:text="@string/text_button_how_to_play"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buttonExit"
            android:layout_width="230dp"
            android:layout_height="90dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_menu"
            android:gravity="center"
            android:text="@string/text_button_exit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHowToPlay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>