<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_background"
        tools:context=".ui.fragments.game.GameFragment">

        <ImageView
            android:id="@+id/wheel"
            android:layout_width="270dp"
            android:layout_height="270dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/wheel"
            app:layout_constraintVertical_bias="0.4"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/score_background"
            android:gravity="center"
            android:text="@string/text_score"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/wheel"
            app:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/buttonBackToMenu"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/button_menu"
            android:gravity="center"
            android:text="@string/text_button_back_to_menu"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/wheel"
            app:layout_constraintVertical_bias="0.01" />

        <ImageView
            android:id="@+id/pointerTriangle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.59"
            app:srcCompat="@drawable/pointer_triangle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="366dp" />

        <TextView
            android:id="@+id/buttonBlack"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button_black"
            android:gravity="center"
            android:text="@string/text_button_black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wheel"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/buttonRed"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button_red"
            android:gravity="center"
            android:text="@string/text_button_red"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wheel"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/buttonSpin"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/button_spin"
            android:gravity="center"
            android:text="@string/text_button_spin"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wheel"
            app:layout_constraintVertical_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>